--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.content::-webkit-scrollbar {
+  width: 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 80%);
+}
+
+::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 60%);
+  border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: hsl(0, 0%, 40%);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: hsl(0, 0%, 20%);
+}
+
+/* Ensure the track remains visible */
+::-webkit-scrollbar-track-piece:start {
+  background: hsl(0, 0%, 80%);
+}
+
+::-webkit-scrollbar-track-piece:end {
+  background: hsl(0, 0%, 80%);
+}
+/* Force the scrollbar to be always visible */
+.content.force-scrollbar {
+  overflow-y: scroll;
+  height: 100vh;
+}
