--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,9 +5,11 @@
 ::-webkit-scrollbar {
   width: 0;
   height: 0;
+  z-index: 9999;
 }
 .content::-webkit-scrollbar {
   width: 0.5rem;
+  z-index: 9999;
 }
 ::-webkit-scrollbar-track {
   background: hsl(0, 0%, 80%);
